Removed empty CSS file and fixed alignment of h2 text

--- a/public_html/stylesheets/main.css
+++ b/public_html/stylesheets/main.css
@@ -61,6 +61,10 @@ h1 {
 	text-align: center;
 }
 
+h2 {
+	text-align: center;
+}
+
 p + p {
 	margin-top: 8px;
 }
